[gd_scene load_steps=15 format=2]

[ext_resource path="res://Piłkainna.gd" type="Script" id=1]
[ext_resource path="res://Stółinny.gd" type="Script" id=2]
[ext_resource path="res://Gracz.tscn" type="PackedScene" id=3]
[ext_resource path="res://Przeciwnik.tscn" type="PackedScene" id=4]
[ext_resource path="res://Piłka.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/ping_pong_8bit_plop.ogg" type="AudioStream" id=7]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 40
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 869.535, 10 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 853.307, 15.0699 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 23.9844, 370.24 )

[node name="Stol" type="Node"]
script = ExtResource( 2 )

[node name="Kolor stołu" type="ColorRect" parent="."]
margin_left = 200.0
margin_top = 175.0
margin_right = 1200.0
margin_bottom = 575.0
color = Color( 0.0745098, 0.211765, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 602.0
margin_top = 311.0
margin_right = 700.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WynikGracza" type="Label" parent="."]
anchor_right = 0.027
anchor_bottom = 0.045
margin_left = 612.0
margin_top = 352.0
margin_right = 630.5
margin_bottom = 368.25
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 722.0
margin_top = 311.0
margin_right = 820.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 3 )
text = "CPU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WynikPrzeciwnika" type="Label" parent="."]
margin_left = 732.0
margin_top = 352.0
margin_right = 791.0
margin_bottom = 402.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gracz (paletka)" parent="." instance=ExtResource( 3 )]
position = Vector2( 292, 374 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( -0.777946, 1.5874 )

[node name="Ściana górna" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 749.191, 163 )
shape = SubResource( 5 )

[node name="Ściana dolna" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 840.227, 590.027 )
shape = SubResource( 6 )

[node name="Przeciwnik" parent="." instance=ExtResource( 4 )]
position = Vector2( 1102, 374 )

[node name="Pilka1" parent="." instance=ExtResource( 5 )]
position = Vector2( 702, 374 )
script = ExtResource( 1 )

[node name="Ściana lewa" type="Area2D" parent="."]
position = Vector2( 72.0435, -31.7839 )

[node name="Ściana lewa" type="CollisionShape2D" parent="Ściana lewa"]
position = Vector2( 102, 419.804 )
shape = SubResource( 7 )

[node name="Ściana prawa" type="Area2D" parent="."]
position = Vector2( 1412.28, -37.545 )
__meta__ = {
"_edit_group_": true
}

[node name="Ściana prawa" type="CollisionShape2D" parent="Ściana prawa"]
position = Vector2( -188, 405.804 )
shape = SubResource( 7 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="dzwiekpunktu" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
[connection signal="body_entered" from="Ściana lewa" to="." method="_on_ciana_lewa_body_entered"]
[connection signal="body_entered" from="Ściana prawa" to="." method="_on_ciana_prawa_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
